# rbac-rs

./: .env  Cargo.toml  LICENSE  README.md  README_zh-CN.md  openapi.yaml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: config.rs  db.rs  dto.rs  error.rs  handler.rs  lib.rs  middleware.rs  redis.rs  router.rs  service.rs
api/src/dto/: auth.rs  pagination.rs  permission.rs  response.rs  role.rs  user.rs
api/src/handler/: auth_handler.rs  permission_handler.rs  role_handler.rs  user_handler.rs
api/src/middleware/: auth.rs  current_user.rs  rbac.rs
api/src/service/: auth_service.rs  permission_service.rs  role_service.rs  user_service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260619_000001_create_table.rs  m20260620_000001_init_data.rs  m20260621_000001_init_super_admin.rs
model/: Cargo.toml
model/src/: lib.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
settings/: default.toml
src/: main.rs
util/: Cargo.toml
util/src/: password.rs
web/: README.md  README_zh-CN.md  package-lock.json  package.json  vite.config.ts
web/src/: components.d.ts  main.ts
web/src/api/: auth.ts  permission.ts  role.ts  user.ts
web/src/directives/: permission.ts
web/src/layouts/: MainLayout.vue
web/src/locales/: index.ts
web/src/locales/en/: index.ts
web/src/locales/zh/: index.ts
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/styles/: index.scss
web/src/types/: index.ts
web/src/utils/: request.ts
web/src/views/: Dashboard.vue  Profile.vue
web/src/views/auth/: Login.vue  Register.vue
web/src/views/permissions/: PermissionDetail.vue  PermissionList.vue
web/src/views/roles/: RoleDetail.vue  RoleList.vue
web/src/views/users/: UserDetail.vue  UserList.vue
