[workspace]
members = [".", "api", "migration", "model", "util"]
default-members = ["api"]

[package]
name = "rbac-rs"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"

sea-orm-migration = "~2.0.0-rc"
sea-orm = { version = "~2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "debug-print",
    "entity-registry",
] }

anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
dotenvy = "0.15"
config = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0.5", features = ["std"] }

chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }

async-trait = "0.1"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
[dependencies]
api = { path = "api" }
anyhow = { workspace = true }
