[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }

sea-orm = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

uuid = { workspace = true }

migration = { path = "../migration" }
model = { path = "../model" }
util = { path = "../util" }
argon2 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
serde_with = { workspace = true}
