[package]
edition = "2024"
name = "migration"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
model = { path = "../model" }
uuid = { workspace = true }
dotenvy = { workspace = true }
util = { path = "../util" }

[dependencies.sea-orm-migration]
workspace = true
